# rtcom-accounts-plugin-telegram

data/: Makefile.am  telegram-advanced.glade
debian/: changelog  control  install
src/: Makefile.am  telegram-plugin.c
